--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -7,8 +7,20 @@
 	justify-content: center;
 	border: 1px solid black;
 	margin: 0 7.5px 15px;
-	background-position: centent;
-	background-size: cover;
+	overflow: hidden;
+
+	&:hover {
+		cursor: pointer;
+
+		& .background-image {
+			transform: scale(1.1);
+			transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95)
+		}
+
+		& .content {
+			opacity: 0.9;
+		}
+	}
 
 	&.large {
 		height: 380px;
@@ -22,7 +34,15 @@
 		margin-left: 7.5px;
 	}
 
+	.background-image {
+		width: 100%;
+		height: 100%;
+		background-position: centent;
+		background-size: cover;
+	}
+
 	.content {
+		position: absolute;
 		height: 90px;
 		padding: 0 25px;
 		display: flex;
@@ -30,6 +50,8 @@
 		align-items: center;
 		justify-content: center;
 		border: 1px solid black;
+		background-color: white;
+		opacity: 0.7;
 
 		.title {
 			font-weight: bold;
